# carbonalt

./: .gitignore  README.md  gatsby-config.js  package-lock.json  package.json
.github/workflows/: deploy.yml
CO2 Toy Model/: Energy Prediction.ipynb  trained_energy
forecast/: Energy Prediction.ipynb  predictions_hours_ahead.py  pyproject.toml  trained_energy_cpu  trained_energy_gpu
forecast/forecast/: cli.py  data_retrieval.py  predict.py
forecast/tests/: test_forecast.py
src/components/: seo.js
src/components/card/: card.jsx  card.module.scss
src/components/icon/: icon.jsx
src/components/icon-select/: icon-select.jsx  icon-select.module.scss  index.js
src/components/layout/: layout.jsx  layout.module.scss
src/components/page-footer/: index.js  page-footer.jsx  page-footer.module.scss
src/components/page-header/: index.js  page-header.jsx  page-header.module.scss
src/pages/: 404.js  about.js  facts.js  index.js  links.js
src/styles/: about.module.scss  colors.scss  facts.module.scss  global.scss  index.module.scss
