[tool.poetry]
name = "forecast"
version = "0.1.0"
description = ""
authors = ["akita8 <mbianchi.akita@gmail.com>", "Nikos nikos.nakisph@gmail.com"]

[tool.poetry.dependencies]
python = "^3.9.5"
torch = "^1.7.1"
click = "^7.1.2"
requests = "^2.25.1"
lxml = "^4.6.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
notebook = "^6.2.0"
pandas = "^1.2.1"
numpy = "^1.19.5"
matplotlib = "^3.3.3"
flake8 = "^3.8.4"
black = "^20.8b1"
openpyxl = "^3.0.6"
scikit-learn = "^0.24.1"

[tool.poetry.scripts]
predict = 'forecast.cli:predict'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
